# R-ShareMouse

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  RUST_UPGRADE_GUIDE.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: dependency-scan.yml
apps/rshare-cli/: Cargo.toml
apps/rshare-cli/src/: config.rs  main.rs  output.rs
apps/rshare-cli/src/commands/: config_cmd.rs  devices.rs  discover.rs  logs.rs  mod.rs  start.rs  status.rs  stop.rs  usb.rs
apps/rshare-daemon/: Cargo.toml
apps/rshare-daemon/src/: audio_runtime.rs  main.rs
apps/rshare-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/rshare-desktop/src-tauri/capabilities/: default.json
apps/rshare-desktop/src-tauri/src/: main.rs
apps/rshare-desktop/src/src/app/: App.tsx  desktop-model.test.mjs  desktop-shell.test.mjs
apps/rshare-desktop/src/src/app/components/: MonitorManager.tsx
apps/rshare-desktop/ui/: app.js  index.html  layout.mjs  layout.test.mjs  styles.css
apps/rshare-gui/: Cargo.toml
apps/rshare-gui/src/: app.rs  dashboard.rs  main.rs  tray.rs  ui.rs
apps/rshare-gui/src/ui/: layout_view.rs  main_view.rs  settings_view.rs
crates/rshare-common/: Cargo.toml
crates/rshare-common/src/: lib.rs
crates/rshare-core/: Cargo.toml
crates/rshare-core/src/: config.rs  daemon_client.rs  input_mode.rs  ipc.rs  layout.rs  lib.rs  local_controls.rs  runtime.rs  service.rs  session.rs
crates/rshare-core/src/clipboard/: mod.rs
crates/rshare-core/src/device/: mod.rs
crates/rshare-core/src/engine/: clipboard.rs  forwarding.rs  hotkey.rs  integrated.rs  mod.rs  state_machine.rs
crates/rshare-core/src/protocol/: mod.rs
crates/rshare-core/tests/: input_mode_contract.rs  ipc_contract.rs  layout_graph_contract.rs  runtime_contract.rs  session_state_machine.rs
crates/rshare-input/: Cargo.toml
crates/rshare-input/src/: backend.rs  edge_detection.rs  emulator.rs  events.rs  gamepad.rs  lib.rs  listener.rs  privilege.rs  selection.rs
crates/rshare-net/: Cargo.toml
crates/rshare-net/src/: codec.rs  connection.rs  discovery.rs  discovery_test.rs  encryption.rs  lib.rs  network_manager.rs  transport.rs
crates/rshare-platform/: Cargo.toml
crates/rshare-platform/src/: clipboard.rs  file_drop.rs  firewall.rs  lib.rs  linux.rs  linux_evdev.rs  linux_uinput.rs  macos.rs  system.rs  usb_forwarding.rs  windows.rs
crates/rshare-platform/tests/: windows_driver_smoke.rs
docs/: roadmap.md
docs/plans/: 2026-04-18-egui-control-console-design.md  2026-04-18-egui-control-console.md  2026-04-19-alpha-2-full-input-loop-design.md  2026-04-19-alpha-2-full-input-loop-implementation-plan.md  2026-04-19-alpha-2-input-loop.md  2026-04-19-desktop-daemon-layout-implementation-plan.md  2026-04-19-desktop-daemon-layout-product-design.md  2026-04-20-desktop-background-acceptance.md  2026-05-02-hid-and-experimental-usb-forwarding.md
drivers/windows/: README.md
drivers/windows/rshare-common/: rshare_ioctls.h
drivers/windows/rshare-filter/: driver.c  rshare-filter.inf  rshare-filter.vcxproj
drivers/windows/rshare-vhid/: driver.c  rshare-vhid.inf  rshare-vhid.vcxproj
drivers/windows/tools/: rshare-driver-probe.c
other/figma-ui/: index.html  package-lock.json  package.json  vite.config.ts
other/figma-ui/src/: main.tsx
other/figma-ui/src/app/: App.tsx  desktop-model.mjs  desktop-model.test.mjs  desktop-shell.mjs  desktop-shell.test.mjs  desktop-theme.mjs  desktop-theme.test.mjs
other/figma-ui/src/app/components/: MonitorManager.tsx
other/figma-ui/src/styles/: index.css
refs/: input-output-references.md
scripts/: discover.bat  discover.sh  start-gui.bat  start-gui.sh
scripts/driver/: build.ps1  collect-logs.ps1  install-test-driver.ps1  sign-test-driver.ps1  uninstall-test-driver.ps1
