[workspace]
members = [
    "crates/rshare-common",
    "crates/rshare-core",
    "crates/rshare-net",
    "crates/rshare-input",
    "crates/rshare-platform",
    "apps/rshare-desktop/src-tauri",
    "apps/rshare-cli",
    "apps/rshare-daemon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["R-ShareMouse Contributors"]
repository = "https://github.com/a1112/R-ShareMouse"

[workspace.dependencies]
# Async runtime - 升级到 1.52 (LTS)
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"

# Error handling - thiserror 2.0 有一些 API 变更
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Networking
quinn = "0.11"
bytes = "1.10"

# Input handling - ⚠️ enigo 0.6 有重大 API 变更，需要适配!
rdev = "0.5"
enigo = "0.6"

# Clipboard - arboard 4.0 需要更新 API
arboard = "4.0"

# Configuration
config = "0.15"
directories = "5.0"
toml = "0.8"

# Utils
uuid = { version = "1.15", features = ["v4", "serde"] }
hostname = "0.5"
cfg-if = "1.0"

# GUI - egui 0.30 有一些新特性和变更
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "glow"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
