[package]
name = "rshare-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rshare"
path = "src/main.rs"

[dependencies]
rshare-core = { path = "../../crates/rshare-core" }
rshare-net = { path = "../../crates/rshare-net" }
rshare-input = { path = "../../crates/rshare-input" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
toml = { workspace = true }

# CLI utilities
clap = { workspace = true }
colored = "2.1"
atty = "0.2"
uuid = { workspace = true }
hostname = { workspace = true }
