[package]
name = "rshare-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rshare-daemon"
path = "src/main.rs"

[dependencies]
rshare-core = { path = "../../crates/rshare-core" }
rshare-net = { path = "../../crates/rshare-net" }
rshare-input = { path = "../../crates/rshare-input" }
rshare-platform = { path = "../../crates/rshare-platform" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hostname = { workspace = true }
tracing-appender = "0.2"
dirs = "5.0"
