[package]
name = "rshare-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rshare-gui"
path = "src/main.rs"

[dependencies]
rshare-core = { path = "../../crates/rshare-core" }
rshare-net = { path = "../../crates/rshare-net" }
rshare-input = { path = "../../crates/rshare-input" }
rshare-platform = { path = "../../crates/rshare-platform" }

tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Logging
log = "0.4"
env_logger = "0.11"

egui = { workspace = true }
eframe = { workspace = true }

# Native icons
image = { version = "0.25", features = ["png"] }

# System tray
tray-icon = "0.19"

# UUID support
uuid = { workspace = true }

# Hostname
hostname = { workspace = true }
