[package]
name = "rshare-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
tracing = { workspace = true }
arboard = { workspace = true }
directories = { workspace = true }
dirs = "5"
toml = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
rshare-common = { path = "../rshare-common" }
