[package]
name = "rshare-net"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rshare-core = { path = "../rshare-core" }

tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
if-addrs = "0.13"

# mDNS service discovery
mdns-sd = "0.11"

[dev-dependencies]
tokio-test = "0.4"
