[package]
name = "rshare-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
rshare-common = { path = "../rshare-common" }
rshare-core = { path = "../rshare-core" }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
cfg-if = { workspace = true }
async-trait = "0.1"
arboard = "3.4"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xtest", "xrandr", "xrecord", "xinput"], optional = true }
wayland-client = { version = "0.31", optional = true }
nix = { version = "0.29", features = ["fs"], optional = true }
evdev = { version = "0.12", optional = true }
input-event-codes = "0.1"
libc = "0.2"

[features]
default = ["x11"]
x11 = ["dep:x11", "dep:nix", "dep:evdev"]
wayland = ["dep:wayland-client"]
uinput = ["dep:nix", "dep:evdev"]
